--- a/src/progettojavaavanzata1/EsitoFXML.fxml
+++ b/src/progettojavaavanzata1/EsitoFXML.fxml
@@ -6,6 +6,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="448.0" prefWidth="646.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="progettojavaavanzata1.EsitoFXMLController">
+   <children>
+      <TableView fx:id="table" layoutX="133.0" layoutY="57.0" prefHeight="322.0" prefWidth="430.0">
+        <columns>
+          <TableColumn fx:id="colonnaTentativo" prefWidth="278.0" text="Tentativo" />
+          <TableColumn fx:id="colonnaEsito" prefWidth="151.0" text="Esito" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
